# batch-orchestra

./: .gitignore  LICENSE  README.md  batch_executor_page.py  temporal-batch.code-workspace
python/: README.md  batch_executor.py  batch_executor_page.py  batch_orchestrator.py  batch_orchestrator_client.py  batch_orchestrator_data.py  batch_orchestrator_io.py  batch_orchestrator_page.py  batch_page_processor_context.py  batch_page_processor_registry.py  batch_processor.py  batch_processor_context.py  batch_tracker.py  batch_worker.py  pyproject.toml  requirements-dev.txt  temporal.db
python/batch_orchestra/: __init__.py  batch_orchestrator.py  batch_orchestrator_client.py  batch_orchestrator_io.py  batch_orchestrator_reduce.py  batch_processor.py  batch_processor_reduce.py  batch_reduce.py  batch_reduce_handle.py  batch_tracker.py  batch_worker.py
python/batch_orchestra/internal/: state.py
python/sample/: README.md  inflate_product_prices_page_processor.py  perform_sql_batch_migration.py  process_fakedb_page.py  product_db.py  run_worker.py  run_workers.py  start_batch_executor.py
python/samples/: README.md  inflate_product_prices_page_processor.py  pause_and_resume_processing.py  perform_sql_batch_migration.py  product_db.py  progress_viewer.py  run_workers.py  set_sql_batch_migration_parallelism.py
python/samples/lib/: collect_product_updates.py  inflate_product_prices_page_processor.py  product_db.py
python/tests/: batch_orchestator_test.py  batch_orchestrator_test.py  batch_orchestrator_with_tracker_test.py  batch_processor_test.py  batch_tracker_test.py  conftest.py  process_page_test.py
